notesapp/namespace.yml
kind: Namespace
apiVersion: v1
metadata:           #information about the namespace
  name: notes-app
