notesapp/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notesapp-ingress
  namespace: notes-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:  
      - pathType: Prefix      
        path: "/notesapp"
        backend:
          service:
            name: notesapp-service
            port:
              number: 8000
